[package]
name = "cargo-danger"
version = "0.1.0"
authors = ["Conrad Dean <conrad.p.dean@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A Cargo utility for exploring a crate's dependencies"
repository = "https://github.com/cpdean/cargo-danger"
readme = "README.md"

[dependencies]
