[package]
name = "cargo-danger"
version = "0.2.2"
authors = ["Conrad Dean <conrad.p.dean@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A Cargo utility for exploring a crate's dependencies"
repository = "https://github.com/cpdean/cargo-danger"
readme = "README.md"

[dependencies]
cargo = "0.32"
env_logger = "0.6"
failure = "0.1"
petgraph = "0.4"
structopt = "0.2"
clap = "2.32.0"

[dependencies.syn]
version = "0.15.26"
features = ["parsing", "full"]
